--- a/.gitmodules
+++ b/.gitmodules
@@ -84,3 +84,6 @@
 	path = 3rdparty/miniupnp/miniupnp
 	url = ../../miniupnp/miniupnp.git
 	ignore = dirty
+[submodule "3rdparty/rtmidi"]
+	path = 3rdparty/rtmidi
+	url = https://github.com/thestk/rtmidi
