--- a/rpcs3/Emu/CMakeLists.txt
+++ b/rpcs3/Emu/CMakeLists.txt
@@ -398,6 +398,7 @@ target_sources(rpcs3_emu PRIVATE
     Io/Skylander.cpp
     Io/GHLtar.cpp
     Io/RB3MidiKeyboard.cpp
+    Io/RB3MidiGuitar.cpp
     Io/Buzz.cpp
     Io/Turntable.cpp
     Io/usio.cpp
